--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node app.js",
     "test": "mocha --recursive --exit"
   },
-  "author": "riaan@entersekt.com",
+  "author": "hamzaarain852sba@gmail.com",
   "description": "Basic to do list exercise",
   "devDependencies": {
     "chai": "^4.2.0",
